# panhumanpy

./: .flake8  .gitignore  .pre-commit-config.yaml  ANNotate_R.R  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  README.md  cell_types.txt  pixi.toml  pyproject.toml  temp_pixi.toml  tutorial_panhumanpy.ipynb
.devcontainer/: Dockerfile  devcontainer.json
data/kfold_data/: read_data.py
dev_utils/: requirements_min.txt
examples/: panhuman.py
src/azimuthpy/: __init__.py  azimuth.py  cell_type_hierarchy.py  datatypes.py  loss_functions.py  model_runners.py  umap.py  utils.py
src/azimuthpy/panhuman/: __init__.py  model_loader.py
src/azimuthpy/panhuman/models/default/: encoder_classes_level0.txt  encoder_classes_level1.txt  encoder_classes_level2.txt  encoder_classes_level3.txt  encoder_classes_level4.txt  encoder_classes_level5.txt  encoder_classes_level6.txt  encoder_classes_level7.txt  feature_panel.txt
src/azimuthpy/panhuman/postprocessing/: __init__.py  correction_table_fine.csv  correction_table_medium.csv  label_correction.py
src/hatch_tensorflow_detector/: __init__.py  pyproject.toml
src/panhumanpy/: ANNotate.py  ANNotate_tools.py  __init__.py  loss_fn.py
src/panhumanpy/_tools/inference_encoders/: __init__.py  inference_encoders.pkl
src/panhumanpy/_tools/inference_model/: __init__.py
src/panhumanpy/_tools/postprocessing/: __init__.py  panhuman_annotate_medium.csv
src/panhumanpy/core/: ANNotate.py  __init__.py
src/panhumanpy/models/M0.2/: encoder_maps.json
src/panhumanpy/postprocessing/: postprocessing.py
src/panhumanpy/preprocessing/: data_prep.py
src/panhumanpy/tools/: __init__.py
src/panhumanpy/tools/inference_encoders/: inference_encoders.pkl
src/panhumanpy/tools/inference_feature_panel/: __init__.py
src/panhumanpy/tools/inference_model/: __init__.py  model_meta.pkl  model_meta.py
src/panhumanpy/tools/postprocessing/: panhuman_annotate_fine.csv  panhuman_annotate_medium.csv
src/panhumanpy/utils/: loss_fn.py
tests/: test_annotate.py  test_basic.py  test_cell_type_hierarchy.py  test_imports.py  test_umap.py
tools/: extract_encoder_classes.py
utils/: env_min.yml
