[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panhumanpy"
version = "0.1.0"
description = "A Python package for automated cell type annotation using neural networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numba",
    "numpy>=1.24.0,<1.25.0",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "pytest>=8.3",
    "jupyter",
    "tensorboard>=2.15.0,<2.16.0",
    "scikit-learn",
    "h5py",
    "anndata>=0.10.9",
    "DateTime",
    "distances",
    "umap-learn",
    "tensorflow>=2.15.0,<2.16.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/panhumanpy"
Documentation = "https://panhumanpy.readthedocs.io/"
Repository = "https://github.com/yourusername/panhumanpy.git"
Changelog = "https://github.com/yourusername/panhumanpy/blob/main/CHANGELOG.md"

[tool.hatch.build]
packages = ["src/panhumanpy"]

[tool.hatch.build.targets.wheel]
packages = ["src/panhumanpy"]
include = [
    "src/panhumanpy/**/*.py",
    "src/panhumanpy/models/**/*.keras",
    "src/panhumanpy/models/**/*.pkl",
    "src/panhumanpy/models/**/*.json"
]
exclude = [
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "__pycache__",
    "*.so",
    ".git*",
    ".pytest_cache",
    "*.egg-info",
    "dist",
    "build",
    "data/*",
    "queries/*",
    "experiments/*"
]

[tool.hatch.build.targets.sdist]
include = [
    "src/panhumanpy/**/*.py",
    "src/panhumanpy/models/**/*.keras",
    "src/panhumanpy/models/**/*.pkl",
    "src/panhumanpy/models/**/*.json"
]
exclude = [
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "__pycache__",
    "*.so",
    ".git*",
    ".pytest_cache",
    "*.egg-info",
    "dist",
    "build",
    "data/*",
    "queries/*",
    "experiments/*"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
float_to_top = true
