[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-tensorflow-detector"
version = "0.1.0"
description = "Hatch build hook for automatic TensorFlow GPU detection"
requires-python = ">=3.8"
dependencies = ["hatchling"]

[project.entry-points.hatch]
tensorflow = "hatch_tensorflow_detector:plugin"